--- a/config/locales/enums.ja.yml
+++ b/config/locales/enums.ja.yml
@@ -5,3 +5,12 @@ ja:
         visiting: '予約'
         visited: '受取済'
         cancel: 'キャンセル'
+    contact:
+      category:
+        reserved: '予約について'
+        item: '商品について'
+        shop: '当店について'
+        others: 'その他'
+      status:
+        unsupported: '未対応'
+        closed: '対応済'
