--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -26,7 +26,7 @@ ja:
         email: メールアドレス
         phone: 電話番号
         message: メッセージ
-        category: お問い合わせ内容
+        category: 項目
         status: ステータス
   date:
     abbr_day_names:
